--- a/views/profile.html
+++ b/views/profile.html
@@ -13,7 +13,7 @@
 				<h5>LU: <i>{{user.lu}}</i></h5>
 				<h5 class="truncate"><i>{{user.degree}}</i></h5>
 				<p><b>Usuario desde:</b> {{created}}</p>
-				<p><b>Compañeros de comisión:</b> {{getUserNames(user.partners)}}</p>
+				<p><b>Compañeros de comisión:</b> {{getUserNames(users, user.partners)}}</p>
 				<div ng-show="user.test_fs.answers">
 					<div class="divider"></div>
 					<test-results answers="{{user.test_fs.answers}}"></test-results>
