--- a/views/login.html
+++ b/views/login.html
@@ -31,6 +31,7 @@
                             <option value="" disabled selected>Elija una opción</option>
                             <option value="Ing. Electrónica" data-icon="images/electronica.jpg">Ing. Electrónica</option>
                             <option value="Ing. Electricista" data-icon="images/electricista.jpg">Ing. Electricista</option>
+                            <option value="Ing. Computación" data-icon="images/computacion.jpg">Ing. Computación</option>
                         </select>
                         <label><i class="material-icons">school</i> Carrera</label>
                     </div>
