--- a/views/profile.html
+++ b/views/profile.html
@@ -1,3 +1,13 @@
+<style>
+	.overlay-img {
+	cursor: pointer; 
+	position: absolute; 
+	top:0; 
+	display:block; 
+	margin: auto; 
+	}
+</style>
+
 <div class="container">
 
 	<div class="card-panel grey lighten-3 z-depth-3" ng-show="!edit">
