--- a/views/testResults.html
+++ b/views/testResults.html
@@ -1,3 +1,18 @@
+<style>
+    /* Barras de resultados test */
+    .progress-area {
+    width: 100%;
+    background-color: #ddd;
+    }
+
+    .progress-bar {
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+    }
+</style>
+
 <p><b>Test Felder & Silverman</b></p>
 <div class="row">
     <div class="col s2">
