En vista de probador, inputs para ponerle nombres a las entradas y salidas

--- a/views/hardware.html
+++ b/views/hardware.html
@@ -1,25 +1,29 @@
 <style>
     .led-box {
-    height: 20px;
-    width: 25%;
+        height: 20px;
+        width: 25%;
     }
+
     .led-red {
-    width: 34px;
-    height: 34px;
-    border-radius: 50%;
+        width: 34px;
+        height: 34px;
+        border-radius: 50%;
     }
-    .led-off{
+
+    .led-off {
         background-color: #AAAAAA;
         box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #000000 0 -1px 9px, #FFFFFF 0 2px 12px;
     }
-    .led-on{
+
+    .led-on {
         background-color: #B91717;
         box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 7px 1px, inset #304701 0 -1px 9px, #F75B5B 0 2px 12px;
     }
 </style>
 
 <div class="container valign-wrapper" ng-hide="tester" style="height: 100vh;">
-    <h5 class="center-align grey-text text-lighten-1"><i>Siga las instrucciones para conectarse al probador presionando en <i class="material-icons">usb</i></i></h5>
+    <h5 class="center-align grey-text text-lighten-1"><i>Siga las instrucciones para conectarse al probador presionando
+            en <i class="material-icons">usb</i></i></h5>
 </div>
 
 <div ng-show="tester">
@@ -29,24 +33,33 @@
 
     <center>
         <div class="row">
-            <div class="card hoverable z-depth-1 col s12 m4 offset-m4">
+            <div class="card hoverable z-depth-1 col s12 m6 offset-m3">
                 <div class="card-content">
+
                     <div clas="row">
                         <div class="col s6">
-                            <p><b>Salidas</b></p>
+                            <h5><b>Salidas</b></h5>
                         </div>
                         <div class="col s6">
-                            <p><b>Entradas</b></p>
+                            <h5><b>Entradas</b></h5>
                         </div>
                     </div>
-                    <div class="row" ng-repeat="item in tester">
-                        <div class="switch col s6">
-                            <label>Off<input type="checkbox" ng-model="item.output"><span class="lever"></span>On</label>
+
+                    <div class="row" ng-repeat="item in tester track by $index">
+                        <div class="col s3">
+                            <input type="text" placeholder="{{$index+1}}" style="max-width: 100px; text-align: center;">
                         </div>
-                        <div class="led-box col s6">
+                        <div class="switch col s3">
+                            <label>Off<input type="checkbox" ng-model="item.output"><span
+                                    class="lever"></span>On</label>
+                        </div>
+                        <div class="led-box col s3">
                             <label>
                                 <div class="led-red {{item.input  ? 'led-on':'led-off'}}"></div>
                             </label>
+                        </div>
+                        <div class="col s3">
+                            <input type="text" placeholder="{{$index+1}}" style="max-width: 100px; text-align: center;">
                         </div>
                     </div>
                 </div>
