--- a/views/stats.html
+++ b/views/stats.html
@@ -11,4 +11,10 @@
         </div>
     </div>
 
+    <div class="card hoverable z-depth-1" style="height: 90vh;">
+        <div class="card-content">
+            <div id="attendance_container"></div>            
+        </div>
+    </div>
+
 </div>
