Graficos utiles en seccion de estadistica (TODO: funciona solo para curso con varias calificaciones)

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -47,7 +47,7 @@
 
 <!-- Historial de asistencia a clase -->
 <div class="row">
-    <div class="card hoverable z-depth-1" style="max-height: 350px">
+    <div class="card hoverable z-depth-1">
         <div class="card-content">
             <div id="attendance_container"></div>            
         </div>
