Analizador logico basico para visualizar entradas. TODO: control de salidas

--- a/views/analizer.html
+++ b/views/analizer.html
@@ -1,3 +1,10 @@
-<div class="container">
-    <div id="chart_container"></div>
+<div class="container valign-wrapper" ng-hide="tester" style="height: 100vh;">
+    <h5 class="center-align grey-text text-lighten-1"><i>Siga las instrucciones para conectarse al probador presionando
+            en <i class="material-icons">usb</i></i></h5>
+</div>
+
+<div ng-show="tester" id="chart_container"></div>
+
+<div class="fixed-action-btn" ng-show="tester">
+    <a title="{{running ? 'Detener':'Iniciar'}}" class="btn-floating btn-large {{running ? 'red':'green'}} darken-3" ng-click="toggleStartStop()"><i class="large material-icons">{{running ? 'stop':'play_arrow'}}</i></a>
 </div>
