--- a/views/simulator.html
+++ b/views/simulator.html
@@ -49,7 +49,7 @@
             <tbody>
               <tr ng-repeat="(key,row) in simulations track by $index" style="cursor:pointer" ng-click="loadCircuit(key)">
                 <td>{{row.name}}</td>
-                <td>{{readableTime(row.timestamp)}}</td>
+                <td>{{getTime(3,row.timestamp)}}</td>
                 <td>{{row.size}}</td>
               </tr>      
             </tbody>
