--- a/views/users.html
+++ b/views/users.html
@@ -15,7 +15,7 @@
       </thead>
 
       <tbody>
-        <tr ng-repeat="(key,row) in users" ng-show="!row.admin">
+        <tr ng-repeat="(key,row) in users" ng-show="!row.admin && row.course == user.course">
           <td><img class="circle" src="{{row.avatar}}" height="40px" width="40px"></td>
           <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer" ng-click="viewUser(key)">
             {{row.name}} {{row.secondName}} <i class="material-icons" style="vertical-align:middle;"
