--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 <center>
-    <div ng-show="userLogged==false" class="container black-text" style="margin-top: 50px;" style="z-index:-2">
+    <div ng-show="userLogged==false" class="container black-text" style="margin-top: 50px; z-index:-2">
         <div class="z-depth-1 row hoverable login-box" style="z-index:1;max-width: {{login_mode==1 ? '800px':'400px'}};">
             <div>
                 <a><img src="images/newmainlogo.png" width="150px" /></a>
