--- a/views/profile.html
+++ b/views/profile.html
@@ -65,6 +65,7 @@
 						<option value="" disabled selected>Elija una opción</option>
 						<option value="Ing. Electrónica" data-icon="images/electronica.jpg">Ing. Electrónica</option>
 						<option value="Ing. Electricista" data-icon="images/electricista.jpg">Ing. Electricista</option>
+						<option value="Ing. Computación" data-icon="images/computacion.jpg">Ing. Computación</option>
 					</select>
 					<label><i class="left material-icons">school</i>Carrera</label>
 				</div>
