--- a/views/users.html
+++ b/views/users.html
@@ -1,7 +1,16 @@
 <div class="container">
   <!-- Lista de usuarios -->
-  <div class="section">
-    <h5 class="row" ng-if="users">Usuarios</h5>
+  <div class="section" ng-init="showAll = false">
+    
+    <div class="row" ng-if="users">
+      <h5>Usuarios</h5>
+    </div>
+
+    <label class="section right">
+      <input type="checkbox" ng-model="showAll"/>
+      <span>Todos</span>
+    </label>  
+
     <table class="highlight" ng-if="users" style="max-width:100%;overflow-x:auto;display:inline-block;">
       <thead>
         <tr>
@@ -15,7 +24,7 @@
       </thead>
 
       <tbody>
-        <tr ng-repeat="(key,row) in users" ng-show="!row.admin && row.course == user.course">
+        <tr style="padding: 1px 1px;" ng-repeat="(key,row) in users" ng-show="showAll || (!row.admin && row.course == user.course)">
           <td><img class="circle" src="{{row.avatar}}" height="40px" width="40px"></td>
           <td data-target="view_modal" class="modal-trigger {{row.enrolled ? '':'red-text'}}" style="cursor: pointer" ng-click="viewUser(key)">
             {{row.name}} {{row.secondName}} <i class="material-icons" style="vertical-align:middle;"
@@ -32,8 +41,8 @@
             <a title="Calificaciones" class="waves-effect waves-light orange btn-floating btn-small z-depth-3"
               ng-show="row.enrolled && !row.admin" ng-click="evalUser(key)"><i
                 class="material-icons">playlist_add_check</i></a>
-            <a title="Aprobar" class="waves-effect waves-light red btn-floating btn-small z-depth-3 modal-trigger"
-              data-target="confirm_enroll_modal" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
+            <a title="Aceptar" class="waves-effect waves-light red btn-floating btn-small z-depth-3"
+              ng-click="selectUser(key)" ng-hide="row.enrolled"><i class="material-icons">done_outline</i></a>
           </td>
         </tr>
       </tbody>
@@ -67,11 +76,9 @@
             ng-repeat="(key,row) in activities" ng-show="row.value">
             <td>{{row.name}}</td>
             <td>
-              <div class="input-field">
                 <input class="{{auxiliaryScores[row.id].score!=users[selectedKey].scores[row.id].score?'red-text':''}}"
                   type="number" min="0" max="100" step="1" ng-model="auxiliaryScores[row.id].score"
                   ng-change="auxiliaryScores[row.id].evaluator=user.uid;auxiliaryScores[row.id].timestamp=getTime(0)">
-              </div>
             </td>
             <td>{{row.value}}</td>
             <td title="Eliminar nota">
@@ -190,8 +197,8 @@
   <div class="modal-content">
 
     <h5>Confirme la operación</h5>
-    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?
-    </p>
+    <p>¿Desea aprobar el registro del usuario {{users[selectedKey].name}} {{users[selectedKey].secondName}} como alumno?</p>
+    <p>El curso actual es: <b>{{activitiesTree.course.name}}</b></p>
     <p>El usuario aparecerá en los listados de alumnos para tomar asistencia o evaluar calificaciones y podrá ver el
       progreso de sus notas en la sección de dashboard.</p>
   </div>
