--- a/views/login.html
+++ b/views/login.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class="row">
-                    <button type="submit" name="btn_login" class="col s12 btn btn-large waves-effect green darken-4"
+                    <button type="submit" name="btn_login" class="col s12 btn btn-large waves-effect green darken-4" style="border-radius: 30px;"
                         ng-click="btn_click();">{{btn_text}}</button>
                 </div>
 
